@@ -1,3 +1,8 @@
+2023-12-21 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* index.php:
+	  Announce SDCC 4.4.0 RC1.
+
 2023-12-20 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* index.php:
